// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Name recognized address should render image 1`] = `
<View
  accessibilityState={
    {
      "busy": undefined,
      "checked": undefined,
      "disabled": undefined,
      "expanded": undefined,
      "selected": undefined,
    }
  }
  accessibilityValue={
    {
      "max": undefined,
      "min": undefined,
      "now": undefined,
      "text": undefined,
    }
  }
  accessible={true}
  collapsable={false}
  focusable={true}
  onBlur={[Function]}
  onClick={[Function]}
  onFocus={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  testID="name-0x495f947276749Ce646f68AC8c248420045cb7b5e"
>
  <View
    style={
      [
        {
          "alignItems": "center",
          "alignSelf": "center",
          "backgroundColor": "#f3f5f9",
          "borderRadius": 99,
          "flexDirection": "row",
          "gap": 5,
          "paddingLeft": 8,
          "paddingRight": 8,
          "paddingVertical": 4,
        },
        undefined,
      ]
    }
  >
    <View
      placeholderStyle={
        {
          "backgroundColor": "#f3f5f9",
        }
      }
      useNativeDriver={true}
    >
      <Image
        onLoadEnd={[Function]}
        source={
          {
            "uri": "https://example.com/image.png",
          }
        }
        style={
          [
            {
              "borderRadius": 8,
              "height": 16,
              "width": 16,
            },
            {
              "borderRadius": 8,
              "height": 16,
              "width": 16,
            },
          ]
        }
      />
      <View
        collapsable={false}
        style={
          {
            "bottom": 0,
            "left": 0,
            "opacity": 1,
            "position": "absolute",
            "right": 0,
            "top": 0,
          }
        }
      >
        <View
          style={
            [
              {
                "borderRadius": 8,
                "height": 16,
                "width": 16,
              },
              {
                "backgroundColor": "#eee",
              },
              {
                "backgroundColor": "#f3f5f9",
              },
            ]
          }
        />
      </View>
    </View>
    <Text
      accessibilityRole="text"
      ellipsizeMode="tail"
      numberOfLines={1}
      style={
        {
          "color": "#121314",
          "flexShrink": 1,
          "fontFamily": "Geist Regular",
          "fontSize": 16,
          "letterSpacing": 0,
          "lineHeight": 24,
        }
      }
    >
      Known name
    </Text>
  </View>
</View>
`;

exports[`Name recognized address should return name 1`] = `
<View
  accessibilityState={
    {
      "busy": undefined,
      "checked": undefined,
      "disabled": undefined,
      "expanded": undefined,
      "selected": undefined,
    }
  }
  accessibilityValue={
    {
      "max": undefined,
      "min": undefined,
      "now": undefined,
      "text": undefined,
    }
  }
  accessible={true}
  collapsable={false}
  focusable={true}
  onBlur={[Function]}
  onClick={[Function]}
  onFocus={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  testID="name-0x495f947276749Ce646f68AC8c248420045cb7b5e"
>
  <View
    style={
      [
        {
          "alignItems": "center",
          "alignSelf": "center",
          "backgroundColor": "#f3f5f9",
          "borderRadius": 99,
          "flexDirection": "row",
          "gap": 5,
          "paddingLeft": 8,
          "paddingRight": 8,
          "paddingVertical": 4,
        },
        undefined,
      ]
    }
  >
    <View
      placeholderStyle={
        {
          "backgroundColor": "#f3f5f9",
        }
      }
      useNativeDriver={true}
    >
      <View
        onLoadEnd={[Function]}
        style={
          {
            "backgroundColor": "#ffffff",
            "borderRadius": 8,
            "height": 32,
            "overflow": "hidden",
            "width": 32,
          }
        }
      >
        <View
          style={
            {
              "height": 32,
              "width": 32,
            }
          }
        />
      </View>
      <View
        collapsable={false}
        style={
          {
            "bottom": 0,
            "left": 0,
            "opacity": 1,
            "position": "absolute",
            "right": 0,
            "top": 0,
          }
        }
      >
        <View
          style={
            [
              {},
              {
                "backgroundColor": "#eee",
              },
              {
                "backgroundColor": "#f3f5f9",
              },
            ]
          }
        />
      </View>
    </View>
    <Text
      accessibilityRole="text"
      ellipsizeMode="tail"
      numberOfLines={1}
      style={
        {
          "color": "#121314",
          "flexShrink": 1,
          "fontFamily": "Geist Regular",
          "fontSize": 16,
          "letterSpacing": 0,
          "lineHeight": 24,
        }
      }
    >
      Known name
    </Text>
  </View>
</View>
`;

exports[`Name unknown address displays checksummed address 1`] = `
<View
  style={
    [
      {
        "alignItems": "center",
        "alignSelf": "center",
        "backgroundColor": "#f3f5f9",
        "borderRadius": 99,
        "flexDirection": "row",
        "gap": 5,
        "paddingLeft": 8,
        "paddingRight": 8,
        "paddingVertical": 4,
      },
      undefined,
    ]
  }
>
  <SvgMock
    color="#121314"
    fill="currentColor"
    height={20}
    name="Question"
    style={
      {
        "height": 20,
        "width": 20,
      }
    }
    width={20}
  />
  <Text
    accessibilityRole="text"
    ellipsizeMode="middle"
    numberOfLines={1}
    style={
      {
        "color": "#121314",
        "flexShrink": 1,
        "fontFamily": "Geist Regular",
        "fontSize": 16,
        "letterSpacing": 0,
        "lineHeight": 24,
      }
    }
  >
    0x29900...A5B4e
  </Text>
</View>
`;
